# Rust-Screenx-HR-Automatization

./: .env.example  .gitignore  Caddyfile  DEPLOYMENT.md  ONEF_SWAGGER.yaml  PROJECT_ANALYSIS.md  README.md  architecture.md  docker-compose.yml  setup_db.sh
recruitment-backend/: .env.example  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  ONEF_INTEGRATION.md
recruitment-backend/migrations/: 20240101000001_create_tests.sql  20240101000002_create_test_attempts.sql  20251104060000_create_vacancies.sql  20251104101200_add_negotiated_salary_to_vacancies.sql  20260108000000_create_candidate_applications.sql  20260116114800_add_presentation_support.sql  20260119195000_add_overtime_statuses.sql  20260120100000_add_needs_review_status.sql  20260120160000_consolidated_grading_fields.sql  20260126211202_add_ai_rating_to_candidates.sql  20260205000000_add_status_to_candidates.sql  20260206000000_create_messages.sql  20260211000000_onef_sync.sql  20260622000000_add_user_auth.sql  20260624120000_create_responses.sql
recruitment-backend/scripts/: docker-entrypoint.sh  vacancy_creation.py
recruitment-backend/src/: config.rs  error.rs  lib.rs  main.rs
recruitment-backend/src/database/: pool.rs
recruitment-backend/src/dto/: integration_dto.rs  mod.rs  public_dto.rs  vacancy_dto.rs  webhook_dto.rs
recruitment-backend/src/middleware/: auth.rs  cors.rs  logging.rs  rate_limit.rs
recruitment-backend/src/models/: answer.rs  answer_log.rs  audit_log.rs  candidate.rs  message.rs  mod.rs  question.rs  response.rs  test.rs  test_attempt.rs  user.rs  vacancy.rs  webhook_log.rs
recruitment-backend/src/routes/: auth.rs  candidate_routes.rs  export.rs  external_vacancy.rs  health.rs  integration.rs  koinotinav.rs  mod.rs  onef.rs  public.rs  responses.rs  telegram.rs  vacancy.rs  webhook.rs
recruitment-backend/src/services/: ai_service.rs  attempt_service.rs  audit_service.rs  (+15 more)
recruitment-backend/tests/: integration_api_test.rs  onef_api_test.rs  public_api_test.rs  webhook_test.rs
(+62 files in other folders)
