[package]
name = "recruitment-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "compression-gzip", "limit"] }
hyper = "1.0"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "ipnetwork",
    "rust_decimal"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# Authentication & Security
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
http = "1.1"
subtle = "2.5"
# Force transitive deps to stay on edition-2021 build of base64ct
base64ct = { version = "=1.7.1", default-features = false }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Decimal
rust_decimal = { version = "1.32", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File handling
bytes = "1.5"
tokio-util = { version = "0.7", features = ["io"] }

# Background jobs (optional)
tokio-cron-scheduler = "0.10"

# OpenAPI Docs
utoipa = { version = "4.2.3", features = ["axum_extras"] }
hmac = "0.12.1"
sha2 = "0.10.9"
hex = "0.4.3"
url = "2.5.8"
base64 = "0.22.1"
# utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
